# gmail-mcp-extended

./: .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  DEVLOG.md  README.md  config.yaml  config.yaml.example  pyproject.toml
chat_mcp/chat/: __init__.py  processor.py  user_resolver.py
chat_mcp/mcp/tools/: __init__.py
docs/: authentication.md  docs-mcp.md  drive-mcp.md  google-docs-api-lists.md  overview.md  setup.md  structure.md
docs_mcp/: __init__.py  main.py
docs_mcp/mcp/: __init__.py  resources.py
docs_mcp/mcp/tools/: __init__.py
docs_mcp/processors/: __init__.py  ocr.py  ocr.pyi  office.py  office.pyi  pdf.py  pdf.pyi  vault.py  vault.pyi
drive_mcp/: __init__.py  main.py
drive_mcp/drive/: __init__.py  gdocs_builder.py  gdocs_test.py  processor.py  processor.pyi
drive_mcp/mcp/: __init__.py  resources.py
drive_mcp/mcp/tools/: __init__.py
gmail_mcp/: __init__.py  types.py
gmail_mcp/auth/: callback_server.py  oauth.py  oauth.pyi  token_manager.py
gmail_mcp/calendar/: processor.py
gmail_mcp/gmail/: helpers.pyi  processor.py
gmail_mcp/mcp/tools/: __init__.py  __init__.pyi  attachments.py  auth.py  bulk.py  calendar.py  conflict.py  contacts.py  email_drafts.py  email_manage.py  email_read.py  email_retention.py  email_send.py  email_settings.py  email_thread.py  filters.py  labels.py  subscriptions.py  vault.py
gmail_mcp/utils/: config.py  logger.py  services.py  services.pyi
shared/: __init__.py  types.py
tests/: conftest.py  test_bulk_and_reply.py  test_calendar_tools.py  test_conflict.py  test_contacts.py  test_contacts_extended.py  test_docs_formatter.py  test_docs_formatter.py.DEPRECATED  test_docs_processors.py  test_drive_processor.py  test_email_drafts.py  test_email_management.py  test_email_retention.py  test_email_settings.py  test_email_thread.py  test_filters.py  test_labels_attachments.py  test_oauth.py  test_subscriptions.py  test_token_manager.py  test_tools.py  test_travel_buffer.py  test_vault.py
